--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<main>
+<!-- <main>
     <app-header></app-header>
     <app-home></app-home>
-</main>
+</main> -->
 
 
-<!-- 
+
 <main>
     <app-login></app-login>
 </main> 
--->
+
 
 
 
