--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,13 @@
 <div class="text-center">
     <div class="d-flex py-3 px-3 mb-4 border-bottom" >
         <div class="col-12 text-end">
-            <button class="btn btn-warning mb-2" type="reset"> Volver </button>
+            <button class="btn btn-warning mb-2" type="reset" > Volver </button>
         </div>
     </div>
 
-    <div class="container gap-1 mt-5 mx-auto col-lg-5 bg-light border border-0 rounded-3 ">
-        <form class="form-signin mx-auto pt-4 p-2 col-10">
+    <div class="container gap-1 mt-5 mx-auto col-lg-5 bg-secondary border border-0 rounded-3">
+
+        <form id="formLogin" [formGroup]="formLogin" class="form-signin mx-auto pt-4 p-2 col-10" method="POST" action="">
             <p class="mb-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" fill="currentColor" class="bi bi-vinyl-fill text-dark" viewBox="0 0 16 16">
                     <path d="M8 6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0 3a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
@@ -16,20 +17,32 @@
             <h1 class="h3 mb-2 fw-normal">Please sign in</h1>
             <br>
             <div class="form-floating mb-1 ">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <input  [class.is-invalid]="formLogin.get('useremail')?.invalid && formLogin.get('useremail')?.touched"
+                        type="email" class="form-control bg-secondary text-white" 
+                        id="loginInput" placeholder="name@example.com" 
+                        formControlName="useremail">
+                <label  for="loginInput">Email address</label>
             </div>
+
             <div class="form-floating mb-1">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input  [class.is-invalid]="formLogin.get('userpassword')?.invalid && formLogin.get('userpassword')?.touched"
+                        type="password" class="form-control bg-secondary text-white" 
+                        id="loginPassword" placeholder="Password" 
+                        formControlName="userpassword">
+                <label for="loginPassword">Password</label>
             </div>
-            <div class="checkbox mb-2 ms-2 text-start">
+
+            <div class="checkbox ms-2 text-start">
                 <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <p style="font-size: .9rem;"><input type="checkbox" value="remember-me"> Remember me</p>
                 </label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-            <p class="mt-3 mb-3 text-end text-muted">© 2021</p>
+
+            <input class="w-100 btn btn-lg btn-warning " type="submit" (click)="login()" value="Sign in" >
+            <p class="mt-3 text-end text-white">© 2021</p>
+            
         </form>
+        <p>{{formLogin.value | json}}</p>
+
     </div>
 </div>
