add login funcional y routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
-<!-- <main>
-    <app-header></app-header>
-    <app-home></app-home>
-</main> -->
-
-
-
-<main>
-    <app-login></app-login>
-</main> 
-
-
+<router-outlet></router-outlet>
 
 
 <!-- <h1>{{ heroe['response'] }}</h1>
