--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
         Crea un equipo de 6 superhéroes pudiendo elegir entre una gran variedad, cada uno con diferentes caracteristicas.
     </p>
     <p class="lead">
-      <a href="../heroes" class="btn btn-lg btn-secondary text-dark fw-bold bg-warning">Comenzar</a>
+      <a (click)="validate()" class="btn btn-lg btn-secondary text-dark fw-bold bg-warning">Comenzar</a>
     </p>
 </main>
 
