--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container mx-auto row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
+<div *ngIf="this.getAuth().getStateLogin()" class="container mx-auto row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
     <div class="row col col-md-6 btn-dark rounded-2 p-2 me-1">  
         <p class="fs-3"> Heroes </p>
         <div class="container py-3 album">
@@ -17,8 +17,6 @@
                                     <p class="card-text"> Intell: {{heroe['powerstats']['intelligence']}}</p>
                                     <p class="card-text"> Strength: {{heroe['powerstats']['strength']}}</p>
                                     <p class="card-text"> Speed: {{heroe['powerstats']['speed']}}</p>
-                                </div>
-                                <div class="col-sm" style="font-size: .8rem;">
                                     <p class="card-text"> Durability: {{heroe['powerstats']['durability']}}</p>
                                     <p class="card-text"> Power: {{heroe['powerstats']['power']}}</p>
                                     <p class="card-text"> Combat: {{heroe['powerstats']['combat']}}</p>
@@ -31,7 +29,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-sm btn-outline-warning me-2" 
-                                            *ngIf="!(this.focus === indice)" (click)="seeProfile(indice)">See Profile</button>
+                                            *ngIf="!(this.focus === indice)" (click)="seeProfile(indice)">Profile</button>
                                     <button type="button" class="btn btn-sm btn-outline-warning me-2" 
                                             *ngIf="(this.focus === indice)" (click)="seeProfile(-1)" >Back</button>
                                     <button type="button" class="btn btn-sm btn-danger fs-6" 
@@ -47,7 +45,12 @@
         
     <div class="row col col-md-6 btn-light rounded-2 p-2 ms-1"> 
         <p class="fs-3"> General Stats </p>
-        
+        <p>intelligence: {{getGrlIntelligence()}}</p>
+        <p>strength: {{getGrlStrength()}}</p>
+        <p>speed: {{getGrlSpeed()}}</p>
+        <p>durability: {{getGrlDurability()}}</p>
+        <p>power: {{getGrlPower()}}</p>
+        <p>combat: {{getGrlCombat()}}</p>
     </div> 
 </div>
 
