redireccion al login al inicar la app

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -9,5 +9,5 @@
 </main>
 
 <footer class="position-absolute bottom-0 start-50 translate-middle-x text-white-50">
-    <p>SuperHeroesApp by <a href="" class="text-white">Nicolas Omar Luna</a>.</p>
+    <p>SuperHeroesApp by <a href="https://www.linkedin.com/in/nluna190898/" class="text-white">Nicolas Omar Luna</a>.</p>
 </footer>
