UPDATE Login usando @angular/material, mejora en las validaciones y mejoras de usabilidad. mejora en implementacion

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.ng-touched.ng-invalid:is(input,textarea),
+.ng-dirty.ng-invalid:is(input,textarea) {
+    outline-color: 2px solid #bd0c0c ;
+}
