--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="text-center">
-    <div class="position-absolute top-50 start-50 translate-middle col-lg-5 bg-secondary border border-0 rounded-3">
-        <form id="formLogin" [formGroup]="formLogin" class="form-signin mx-auto pt-4 p-2 col-10" method="POST" action="#">
+    <div class="position-absolute top-50 start-50 translate-middle col-xl-6 col-md-8 col-sm-10 col-11 bg-white border border-0 rounded-3">
+        
+        <form id="formLogin" [formGroup]="formLogin" class="form-signin mx-auto pt-4 p-2 col-10" >
             <p class="mb-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" fill="currentColor" class="bi bi-vinyl-fill text-dark" viewBox="0 0 16 16">
                     <path d="M8 6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0 3a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
@@ -9,32 +10,36 @@
             </p>
             <h1 class="h3 mb-2 fw-normal">Please sign in</h1>
             <br>
-            <div class="form-floating mb-1 ">
-                <input  [class.is-invalid]="formLogin.get('useremail')?.invalid && formLogin.get('useremail')?.touched"
-                        type="email" class="form-control bg-secondary text-white" 
-                        id="loginInput" placeholder="name@example.com" 
-                        formControlName="useremail">
-                <label  for="loginInput">Email address</label>
-            </div>
 
-            <div class="form-floating mb-1">
-                <input  [class.is-invalid]="formLogin.get('userpassword')?.invalid && formLogin.get('userpassword')?.touched"
-                        type="password" class="form-control bg-secondary text-white" 
-                        id="loginPassword" placeholder="Password" 
-                        formControlName="userpassword">
-                <label for="loginPassword">Password</label>
-            </div>
+            <mat-form-field class="d-block mb-1 fw-bold">
+                <input matInput placeholder="Email" type="text"
+                    id="loginInput" name="email" class="form-control"
+                    formControlName="useremail" 
+                >
+                <mat-error *ngIf="emailControl.invalid && (emailControl.touched || emailControl.dirty)">
+                    <mat-label *ngIf="emailControl.hasError('required')"> El campo es obligatorio.</mat-label>
+                    <mat-label *ngIf="emailControl.hasError('email')"> El campo debe ser un email válido.</mat-label>
+                </mat-error>
+            </mat-form-field>
 
-            <div class="checkbox ms-2 text-start">
-                <label>
-                    <p style="font-size: .9rem;"><input type="checkbox" value="remember-me"> Remember me</p>
-                </label>
-            </div>
+            <mat-form-field class="form-floating d-block mb-1 fw-bold">
+                <input matInput placeholder="Password" type="password"
+                    id="loginPassword" name="password" class="form-control"
+                    formControlName="userpassword" 
+                >
+                <mat-error *ngIf="passwordControl.invalid && (passwordControl.touched || passwordControl.dirty)">
+                    <mat-label *ngIf="passwordControl.hasError('required')"> El campo es obligatorio.</mat-label>
+                </mat-error>
+            </mat-form-field>
 
-            <button id='btn_login' class="w-100 btn btn-lg btn-warning " type="submit" (click)="login()">Sign in</button>
-            <p class="mt-3 text-end text-white">© 2021</p>
-            
+            <button 
+                mat-stroked-button color="accent" class="w-100 btn btn-lg btn-warning text-dark"
+                type="submit" (click)="login()"
+                [disabled]="formLogin.invalid"
+            >Sign in</button>
+            <p class="mt-3 text-end text-dark">© 2021</p>
         </form>
+        
         <!-- <p>{{formLogin.value | json}}</p> -->
 
     </div>
