correccion de fallos, validacion de session iniciada, UPDATE login

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .ng-dirty.ng-invalid:is(input,textarea) {
     outline-color: 2px solid #bd0c0c ;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
